# forecastops

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  _synthetic.py  generic_dataframe.py  lightgbm_array.py  local_ui_demo.py  nixtla_multiseries.py  otel_console.py  prophet_one_line.py  quickstart.ipynb
forecastops/: __init__.py
forecastops/adapters/: __init__.py  base.py  darts.py  dataframe.py  gluonts.py  nixtla.py  prophet.py  registry.py  sklearn.py
forecastops/cli/: main.py
forecastops/core/: __init__.py  backtest.py  capture.py  compare.py  config.py  diagnose.py  diff.py  evaluate.py  normalize.py  report.py  run.py  schema.py  validate.py  wrappers.py
forecastops/otel/: __init__.py  events.py  exporters.py  metrics.py  semconv.py  trace.py
forecastops/store/: __init__.py  duckdb_index.py  local.py  manifest.py  parquet.py
forecastops/ui/: __init__.py  queries.py  server.py
forecastops/ui/static/: app.js  index.html  styles.css
tests/: conftest.py  test_capture_report_ui.py  test_cli.py  test_cli_commands.py  test_compare_pinball_skill.py  test_core_correctness.py  test_diagnose.py  test_evaluate_compare.py  test_groups_and_backtest.py  test_metrics_and_slices.py  test_nixtla_intervals.py  test_normalization_and_validation.py  test_otel_export.py  test_store_and_queries.py  test_wrappers_and_optional_adapters.py
