[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "forecastops"
version = "0.2.0"
description = "Local-first observability, evaluation, and UI for production forecasts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "ForecastOps contributors" }]
keywords = ["forecasting", "observability", "evaluation", "duckdb", "opentelemetry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "duckdb>=1.0",
  "fastapi>=0.111",
  "numpy>=1.24",
  "opentelemetry-api>=1.24",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "python-dateutil>=2.8",
  "pyyaml>=6.0",
  "typer>=0.12",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "opentelemetry-sdk>=1.24",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
otel = ["opentelemetry-sdk>=1.24"]
all = ["opentelemetry-sdk>=1.24"]

[project.urls]
Homepage = "https://github.com/Parisi-Labs/forecastops"
Repository = "https://github.com/Parisi-Labs/forecastops"
Changelog = "https://github.com/Parisi-Labs/forecastops/blob/main/CHANGELOG.md"
Issues = "https://github.com/Parisi-Labs/forecastops/issues"

[project.scripts]
fops = "forecastops.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["forecastops"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
